--- a/streetek3d.html
+++ b/streetek3d.html
@@ -37,7 +37,41 @@
     </div>
   </div>
 </nav>
-    <h1>Streetek 3D</h1>
+
+
+      
+      <div class="px-4 py-5 my-5 text-center">
+      <img class="d-block mx-auto mb-4" src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+      <h1 class="display-5 fw-bold">Streetek 3D</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">
+          Somos una empresa tecnológica comprometida con la sostenibilidad y la innovación urbana, especializada en el diseño y fabricación 
+          de mobiliario urbano mediante impresión 3D con plásticos reciclados. Integramos tecnología IoT en nuestros productos y ofrecemos servicios 
+          de realidad virtual para visualizar y planificar proyectos antes de su ejecución, contribuyendo al desarrollo de ciudades más inteligentes, 
+          sostenibles y alineadas con los Objetivos de Desarrollo Sostenible (ODS).
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Botón principal</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secundario</button>
+        </div>
+      </div>
+    </div>
+
+
+  <button type="button" class="btn btn-primary">Primary</button>
+  <button type="button" class="btn btn-secondary">Secondary</button>
+  <button type="button" class="btn btn-success">Success</button>
+  <button type="button" class="btn btn-danger">Danger</button>
+  <button type="button" class="btn btn-warning">Warning</button>
+  <button type="button" class="btn btn-info">Info</button>
+  <button type="button" class="btn btn-light">Light</button>
+  <button type="button" class="btn btn-dark">Dark</button>
+
+  <button type="button" class="btn btn-link">Link</button>
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     
   </body>
