--- a/Productos.html
+++ b/Productos.html
@@ -39,44 +39,9 @@
     </div>
   </nav>
   <!--Nav fin-->
-
-
-        
-      <div class="px-4 py-5 my-5 text-center hero">
-        <h1 class="display-5 fw-bold">Streetek 3D</h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">
-            Somos una empresa tecnológica comprometida con la sostenibilidad y la innovación urbana, especializada en el diseño y fabricación 
-            de mobiliario urbano mediante impresión 3D con plásticos reciclados. Integramos tecnología IoT en nuestros productos y ofrecemos servicios 
-            de realidad virtual para visualizar y planificar proyectos antes de su ejecución, contribuyendo al desarrollo de ciudades más inteligentes, 
-            sostenibles y alineadas con los Objetivos de Desarrollo Sostenible (ODS).
-          </p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">¿Quienes somos?</button></a>
-            <a href="Productos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">nuestros productos</button></a>
-          </div>
-        </div>
-      </div>
-
-  <!--
-    
-
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
-    <button type="button" class="btn btn-success">Success</button>
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-warning">Warning</button>
-    <button type="button" class="btn btn-info">Info</button>
-    <button type="button" class="btn btn-light">Light</button>
-    <button type="button" class="btn btn-dark">Dark</button>
-
-    <button type="button" class="btn btn-link">Link</button>
-  -->
-
-
-  </div>
-
-  <footer>
+  
+<!--footer-->
+<footer>
       <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap">
         <svg class="bi me-2" width="40" height="32" aria-hidden="true">
@@ -91,10 +56,3 @@
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
     </footer>
-
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
-</html>
