--- a/streetek3d.html
+++ b/streetek3d.html
@@ -46,10 +46,7 @@
         <h1 class="display-5 fw-bold">Streetek 3D</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
-            Somos una empresa tecnológica comprometida con la sostenibilidad y la innovación urbana, especializada en el diseño y fabricación 
-            de mobiliario urbano mediante impresión 3D con plásticos reciclados. Integramos tecnología IoT en nuestros productos y ofrecemos servicios 
-            de realidad virtual para visualizar y planificar proyectos antes de su ejecución, contribuyendo al desarrollo de ciudades más inteligentes, 
-            sostenibles y alineadas con los Objetivos de Desarrollo Sostenible (ODS).
+            Somos una empresa tecnológica comprometida con la sostenibilidad y la innovación urbana.
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <a href="Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">¿Quienes somos?</button></a>
@@ -73,27 +70,38 @@
     <button type="button" class="btn btn-link">Link</button>
   -->
 
-
+<!--footer-->
   </div>
 
-  <footer>
-      <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p>
-      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap">
-        <svg class="bi me-2" width="40" height="32" aria-hidden="true">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-      </a>
-      <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQ you nigger</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-      </ul>
-    </footer>
+    <div class="container position-absolute bottom-0 start-50 translate-middle-x">
 
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
+    <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p>
+    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap">
+    <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+      <use xlink:href="#bootstrap"></use>
+    </svg></a>
+        <ul class="nav col-md-4 justify-content-end"> 
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
+        </li> 
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-body-secondary">Features</a>
+        </li> 
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">Pricing</a>
+          </li> 
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">FAQs</a>
+          </li> 
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">About</a>
+          </li> 
+        </ul> 
+      </footer>
+    </div>
 
-
+<!--footer fin-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
