--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -39,14 +39,39 @@
     </div>
   </nav>
   <!--Nav fin-->
-  
+  <!--carousel-->
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/Gio.jpg" class="d-block w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/Alex.jpg" class="d-block w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/Ioritz.jpg" class="d-block w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/Izan.jpg" class="d-block w-50" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+  <!--fin carousel-->
 <!--footer-->
   </div>
 
     <div class="container position-absolute bottom-0 start-50 translate-middle-x">
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
-    <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p>
+    <p class="col-md-4 mb-0 text-body-secondary">© 2026 Streetek3d</p>
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap">
     <svg class="bi me-2" width="40" height="32" aria-hidden="true">
       <use xlink:href="#bootstrap"></use>
