--- a/streetek3d.html
+++ b/streetek3d.html
@@ -55,28 +55,32 @@
         </div>
       </div>
 
-  <!--
-    
 
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
-    <button type="button" class="btn btn-success">Success</button>
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-warning">Warning</button>
-    <button type="button" class="btn btn-info">Info</button>
-    <button type="button" class="btn btn-light">Light</button>
-    <button type="button" class="btn btn-dark">Dark</button>
-
-    <button type="button" class="btn btn-link">Link</button>
-  -->
-
-<!--footer-->
   </div>
 
+
+  <div class="container">
+    <h2>Qué queremos como empresa</h2>
+    <p>
+      En StreetTek 3D queremos cambiar la forma en la que se diseñan y construyen los espacios urbanos. 
+      Apostamos por ciudades más sostenibles, inclusivas y participativas, donde el mobiliario urbano no sea un elemento impuesto, sino una parte integrada del entorno y de las personas que lo usan. 
+      Combinamos tecnología, diseño y sostenibilidad para ofrecer soluciones personalizadas, eficientes y respetuosas con el medio ambiente, utilizando materiales reciclados y procesos de fabricación responsables.
+    </p>
+    
+  </div>
+
+
+
+
+
+
+
+
+  <!--footer inicio-->
     <div class="container position-absolute bottom-0 start-50 translate-middle-x">
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
-    <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p>
+    <p class="col-md-4 mb-0 text-body-secondary">© 2026 Streetek3d</p>
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap">
     <svg class="bi me-2" width="40" height="32" aria-hidden="true">
       <use xlink:href="#bootstrap"></use>
