--- a/streetek3d.html
+++ b/streetek3d.html
@@ -49,8 +49,8 @@
             Somos una empresa tecnológica comprometida con la sostenibilidad y la innovación urbana.
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">¿Quienes somos?</button></a>
-            <a href="Productos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">nuestros productos</button></a>
+            
+
           </div>
         </div>
       </div>
@@ -66,8 +66,28 @@
       Apostamos por ciudades más sostenibles, inclusivas y participativas, donde el mobiliario urbano no sea un elemento impuesto, sino una parte integrada del entorno y de las personas que lo usan. 
       Combinamos tecnología, diseño y sostenibilidad para ofrecer soluciones personalizadas, eficientes y respetuosas con el medio ambiente, utilizando materiales reciclados y procesos de fabricación responsables.
     </p>
+    <br>
+
+    <a href="Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">leer más</button></a>
+
     
   </div>
+
+  <br>
+
+  <div class="container">
+    <h2>Nuestros productos</h2>
+    <p>
+      Diseñamos y fabricamos mobiliario urbano mediante impresión 3D a gran escala, materiales reciclados y filamento recicable. 
+      Nuestro catálogo incluye bancos, papeleras adaptados a cada espacio y necesidad. 
+      Además, ofrecemos la posibilidad de previsualizar los productos en entornos de realidad virtual y aumentada antes de su fabricación, permitiendo a clientes y ciudadanos participar en el diseño final y asegurando una integración perfecta en el entorno urbano.
+    </p>
+    <br>
+
+    <a href="Productos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Leer más</button></a>
+
+  </div>
+
 
 
 
