--- a/Productos.html
+++ b/Productos.html
@@ -39,40 +39,84 @@
     </div>
   </nav>
   <!--Nav fin-->
-  
-<!--footer-->
+
+  <!--column-->
+  <div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
+      <h1>Bancos 3D</h1>
+      <p>Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
+        patios escolares y zonas de descanso.Su diseño es personalizable, resistente a la intemperie y de bajo mantenimiento, contribuyendo a la 
+        economía circular y a la mejora del bienestar urbano. Está disponible en versión individual o modular, permitiendo adaptarse a diferentes 
+        entornos y necesidades.</p>
+        <img src="images/banco.png" alt="">
+    </div>
+    <div class="col">
+      <h1>Papelera 3D</h1>
+      <p class="text-hidden">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
+        el nivel de llenado. Este sistema permite optimizar la gestión de residuos, reducir costes de recogida y mejorar la limpieza urbana mediante 
+        el control remoto del estado de la papelera, facilitando una gestión más eficiente y sostenible de los espacios públicos.</p>
+        <img src="images/papelera.png" class="img-hover">
+    </div>
+    <div class="col">
+      <h1>Previsualizacion de producto en VR</h1>
+      <p>Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
+        su fabricación o colocación. Está dirigido a ayuntamientos y empresas de mobiliario, e incluye formación específica para el uso de la herramienta, 
+        reduciendo errores, mejorando la toma de decisiones y optimizando los resultados finales de cada proyecto.</p>
+        <img src="images/VR.png" width="800px">
+    </div>
   </div>
+</div>
+<!--column fin-->
+<!--footer-->
+<footer class="container">
+  <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
-    <div class="container position-absolute bottom-0 start-50 translate-middle-x">
+    <p class="col-md-4 mb-0 text-body-secondary">
+      © 2026 Streettek3D
+    </p>
 
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
-    <p class="col-md-4 mb-0 text-body-secondary">© 2026 Streetek3d</p>
-    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" aria-label="Bootstrap">
-    <svg class="bi me-2" width="40" height="32" aria-hidden="true">
-      <use xlink:href="#bootstrap"></use>
-    </svg></a>
-      <ul class="nav col-md-4 justify-content-end"> 
-          <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
-          </li> 
-          <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Features</a>
-          </li> 
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary">Pricing</a>
-          </li> 
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary">FAQs</a>
-          </li> 
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary">About</a>
-          </li> 
-      </ul> 
-      </footer>
-      </div>
+    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
+      <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
+    </a>
 
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/Instagram_icon.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/X_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/discord-round-color-icon.webp" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+    </ul>
+
+  </div>
+</footer>
 <!--footer fin-->
 
+
+  <script>
+
+// 1. Capturamos los elementos usando los IDs que pusimos en el HTML
+const imgPapelera = document.getElementById('imagenPapelera');
+const txtPapelera = document.getElementById('textoPapelera');
+
+// 2. Escuchamos cuando el ratón entra en la imagen
+imgPapelera.addEventListener('mouseenter', () => {
+    txtPapelera.classList.remove('text-hidden');
+    txtPapelera.classList.add('text-show');
+});
+
+// 3. Escuchamos cuando el ratón sale de la imagen
+imgPapelera.addEventListener('mouseleave', () => {
+    txtPapelera.classList.remove('text-show');
+    txtPapelera.classList.add('text-hidden');
+});
+
+
+  </script>
+  
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
