--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -39,7 +39,78 @@
     </div>
   </nav>
   <!--Nav fin-->
+<!--inicio-->
+<section class="container py-5" id="quienes-somos">
+  <div class="text-center mb-5">
+    <h2 class="fw-bold">Quiénes somos</h2>
+    <p class="text-muted">
+      Un equipo comprometido con la innovación, la sostenibilidad y el diseño urbano.
+    </p>
+  </div>
 
+  <div class="row g-4">
+
+    <!-- Alex Berna -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Alex Bernal</h5>
+          <p class="text-muted small">Cargo / Rol </p>
+          <p class="card-text">
+            Especialista en visualización de proyectos mediante realidad virtual.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Giorgio Gissi -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Giorgio Gissi</h5>
+          <p class="text-muted small">Cargo / Rol</p>
+          <p class="card-text">
+            Experto en fabricación, materiales sostenibles e impresión 3D aplicada al mobiliario urbano.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Izan Garcia -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Izan Garcia</h5>
+          <p class="text-muted small">Cargo / Rol</p>
+          <p class="card-text">
+            Responsable del desarrollo tecnológico, IoT y diseño, tecnología o gestión de proyectos
+            vinculados a la innovación urbana.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Ioritz Adrian -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Ioritz Adrian</h5>
+          <p class="text-muted small">Cargo / Rol</p>
+          <p class="card-text">
+            Encargado de estrategia, sostenibilidad y coordinación con entidades públicas y privadas.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!--final-->
 <!--footer-->
 <footer class="container">
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
