--- a/Productos.html
+++ b/Productos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body>
+  <body class="productos">
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -44,26 +44,26 @@
   <div class="container text-center">
   <div class="row align-items-start">
     <div class="col">
-      <h1>Bancos 3D</h1>
-      <p>Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
+      <h2>Bancos 3D</h2>
+      <p id="texto" class="text-hidden">Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
         patios escolares y zonas de descanso.Su diseño es personalizable, resistente a la intemperie y de bajo mantenimiento, contribuyendo a la 
         economía circular y a la mejora del bienestar urbano. Está disponible en versión individual o modular, permitiendo adaptarse a diferentes 
         entornos y necesidades.</p>
-        <img src="images/banco.png" alt="">
+        <img src="images/banco.png" id="imagen">
     </div>
     <div class="col">
-      <h1>Papelera 3D</h1>
-      <p class="text-hidden">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
+      <h2>Papelera 3D</h2>
+      <p id="texto" class="text-hidden">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
         el nivel de llenado. Este sistema permite optimizar la gestión de residuos, reducir costes de recogida y mejorar la limpieza urbana mediante 
         el control remoto del estado de la papelera, facilitando una gestión más eficiente y sostenible de los espacios públicos.</p>
-        <img src="images/papelera.png" class="img-hover">
+        <img src="images/papelera.png" id="imagen">
     </div>
     <div class="col">
-      <h1>Previsualizacion de producto en VR</h1>
-      <p>Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
+      <h2>Previsualizacion de producto en VR</h2>
+      <p id="texto" class="text-hidden">Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
         su fabricación o colocación. Está dirigido a ayuntamientos y empresas de mobiliario, e incluye formación específica para el uso de la herramienta, 
         reduciendo errores, mejorando la toma de decisiones y optimizando los resultados finales de cada proyecto.</p>
-        <img src="images/VR.png" width="800px">
+        <img src="images/VR.png" width="800px" id="imagen">
     </div>
   </div>
 </div>
@@ -94,27 +94,6 @@
 </footer>
 <!--footer fin-->
 
-
-  <script>
-
-// 1. Capturamos los elementos usando los IDs que pusimos en el HTML
-const imgPapelera = document.getElementById('imagenPapelera');
-const txtPapelera = document.getElementById('textoPapelera');
-
-// 2. Escuchamos cuando el ratón entra en la imagen
-imgPapelera.addEventListener('mouseenter', () => {
-    txtPapelera.classList.remove('text-hidden');
-    txtPapelera.classList.add('text-show');
-});
-
-// 3. Escuchamos cuando el ratón sale de la imagen
-imgPapelera.addEventListener('mouseleave', () => {
-    txtPapelera.classList.remove('text-show');
-    txtPapelera.classList.add('text-hidden');
-});
-
-
-  </script>
   
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
