--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -50,15 +50,15 @@
 
   <div class="row g-4">
 
-    <!-- Alex Berna -->
+    <!-- Alex ANAL -->
     <div class="col-12 col-md-6 col-lg-3">
       <div class="card h-100 text-center">
         <img src="images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
         <div class="card-body">
           <h5 class="card-title mb-1">Alex Bernal</h5>
-          <p class="text-muted small">Cargo / Rol </p>
+          <p class="text-muted small">Experto estratega </p>
           <p class="card-text">
-            Especialista en visualización de proyectos mediante realidad virtual.
+            Encargado de estrategia, sostenibilidad y coordinación con entidades públicas y privadas.
           </p>
         </div>
       </div>
@@ -70,7 +70,7 @@
         <img src="images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
         <div class="card-body">
           <h5 class="card-title mb-1">Giorgio Gissi</h5>
-          <p class="text-muted small">Cargo / Rol</p>
+          <p class="text-muted small">Diseño 3D</p>
           <p class="card-text">
             Experto en fabricación, materiales sostenibles e impresión 3D aplicada al mobiliario urbano.
           </p>
@@ -84,7 +84,7 @@
         <img src="images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
         <div class="card-body">
           <h5 class="card-title mb-1">Izan Garcia</h5>
-          <p class="text-muted small">Cargo / Rol</p>
+          <p class="text-muted small">Creador de diseños</p>
           <p class="card-text">
             Responsable del desarrollo tecnológico, IoT y diseño, tecnología o gestión de proyectos
             vinculados a la innovación urbana.
@@ -99,9 +99,9 @@
         <img src="images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
         <div class="card-body">
           <h5 class="card-title mb-1">Ioritz Adrian</h5>
-          <p class="text-muted small">Cargo / Rol</p>
+          <p class="text-muted small">Experto en VR</p>
           <p class="card-text">
-            Encargado de estrategia, sostenibilidad y coordinación con entidades públicas y privadas.
+            Especialista en visualización de proyectos mediante realidad virtual.
           </p>
         </div>
       </div>
@@ -116,7 +116,7 @@
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
     <p class="col-md-4 mb-0 text-body-secondary">
-      © 2026 Streettek3D
+      © 2026 Streetek3D
     </p>
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
