--- a/Productos.html
+++ b/Productos.html
@@ -15,7 +15,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" class="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Quienes-somos.html">¿Quienes somos?</a>
@@ -45,25 +45,25 @@
   <div class="row align-items-start">
     <div class="col">
       <h2>Bancos 3D</h2>
-      <p id="texto" class="text-hidden">Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
+      <p class="text-hidden texto">Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
         patios escolares y zonas de descanso.Su diseño es personalizable, resistente a la intemperie y de bajo mantenimiento, contribuyendo a la 
         economía circular y a la mejora del bienestar urbano. Está disponible en versión individual o modular, permitiendo adaptarse a diferentes 
         entornos y necesidades.</p>
-        <img src="images/banco.png" id="imagen">
+        <img src="images/banco.png" class="imagen">
     </div>
     <div class="col">
       <h2>Papelera 3D</h2>
-      <p id="texto" class="text-hidden">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
+      <p class="text-hidden texto">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
         el nivel de llenado. Este sistema permite optimizar la gestión de residuos, reducir costes de recogida y mejorar la limpieza urbana mediante 
         el control remoto del estado de la papelera, facilitando una gestión más eficiente y sostenible de los espacios públicos.</p>
-        <img src="images/papelera.png" id="imagen">
+        <img src="images/papelera.png" class="imagen">
     </div>
     <div class="col">
       <h2>Previsualizacion de producto en VR</h2>
-      <p id="texto" class="text-hidden">Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
+      <p class="text-hidden texto">Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
         su fabricación o colocación. Está dirigido a ayuntamientos y empresas de mobiliario, e incluye formación específica para el uso de la herramienta, 
         reduciendo errores, mejorando la toma de decisiones y optimizando los resultados finales de cada proyecto.</p>
-        <img src="images/VR.png" width="800px" id="imagen">
+        <img src="images/VR.png" width="800px" class="imagen">
     </div>
   </div>
 </div>
@@ -73,7 +73,7 @@
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
     <p class="col-md-4 mb-0 text-body-secondary">
-      © 2026 Streettek3D
+      © 2026 Streetek3D
     </p>
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
@@ -95,7 +95,8 @@
 <!--footer fin-->
 
   
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
   </body>
 </html>
