--- a/streetek3d.html
+++ b/streetek3d.html
@@ -94,7 +94,7 @@
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
     <p class="col-md-4 mb-0 text-body-secondary">
-      © 2026 Streettek3D
+      © 2026 Streetek3D
     </p>
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
