--- a/Productos.html
+++ b/Productos.html
@@ -28,10 +28,8 @@
               idioma
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">English</a></li>
-              <li><a class="dropdown-item" href="#">Euskara</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
+              <li><a class="dropdown-item" href="Productos-ingles.html">ingles</a></li>
+              <li><a class="dropdown-item" href="Productos-euskera.html">Euskera</a></li>
             </ul>
           </li>
         </ul>
