--- a/Productos.html
+++ b/Productos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body class="productos">
+    <body>
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -15,7 +15,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" class="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Quienes-somos.html">¿Quienes somos?</a>
@@ -37,37 +37,39 @@
     </div>
   </nav>
   <!--Nav fin-->
+  
+  <br><br><br><br><br><br><br><br>
 
   <!--column-->
-  <div class="container text-center">
+  <div class="container text-center flex-grow-1">
   <div class="row align-items-start">
-    <div class="col">
+    <div class="col-12 col-md-4 producto-col">
       <h2>Bancos 3D</h2>
       <p class="text-hidden texto">Banco urbano fabricado mediante impresión 3D con plásticos reciclados, diseñado para su uso en espacios públicos como calles, parques, 
         patios escolares y zonas de descanso.Su diseño es personalizable, resistente a la intemperie y de bajo mantenimiento, contribuyendo a la 
         economía circular y a la mejora del bienestar urbano. Está disponible en versión individual o modular, permitiendo adaptarse a diferentes 
         entornos y necesidades.</p>
-        <img src="images/banco.png" class="imagen">
+        <img src="images/banco.png" class="imagen img-fluid img-product">
     </div>
-    <div class="col">
+    <div class="col-12 col-md-4 producto-col">
       <h2>Papelera 3D</h2>
       <p class="text-hidden texto">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
         el nivel de llenado. Este sistema permite optimizar la gestión de residuos, reducir costes de recogida y mejorar la limpieza urbana mediante 
         el control remoto del estado de la papelera, facilitando una gestión más eficiente y sostenible de los espacios públicos.</p>
-        <img src="images/papelera.png" class="imagen">
+        <img src="images/papelera.png" class="imagen img-fluid img-product">
     </div>
-    <div class="col">
+    <div class="col-12 col-md-4 producto-col">
       <h2>Previsualizacion de producto en VR</h2>
       <p class="text-hidden texto">Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
         su fabricación o colocación. Está dirigido a ayuntamientos y empresas de mobiliario, e incluye formación específica para el uso de la herramienta, 
         reduciendo errores, mejorando la toma de decisiones y optimizando los resultados finales de cada proyecto.</p>
-        <img src="images/VR.png" width="800px" class="imagen">
+        <img src="images/VR.png" class="imagen img-fluid img-product">
     </div>
   </div>
 </div>
 <!--column fin-->
 <!--footer-->
-<footer class="container">
+<footer class="py-3 container">
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
     <p class="col-md-4 mb-0 text-body-secondary">
