--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -38,7 +38,7 @@
   </nav>
   <!--Nav fin-->
 <!--inicio-->
-<section class="container py-5" id="quienes-somos">
+<section class="container py-5 flex-grow-1" id="quienes-somos">
   <div class="text-center mb-5">
     <h2 class="fw-bold">Quiénes somos</h2>
     <p class="text-muted">
@@ -110,7 +110,7 @@
 
 <!--final-->
 <!--footer-->
-<footer class="container">
+<footer class="py-3 container">
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
     <p class="col-md-4 mb-0 text-body-secondary">
@@ -136,5 +136,6 @@
 <!--footer fin-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+<script src="script.js"></script>  
+</body>
 </html>
