--- a/streetek3d.html
+++ b/streetek3d.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Streetek 3D</title>
+    <title>Streetek</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles.css">
   </head>
@@ -11,7 +11,7 @@
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="streetek3d.html">Streetek 3D</a>
+      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="images/streetek.svg" width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,8 +40,8 @@
 
 
         
-      <div class="px-4 py-5 my-5 text-center hero">
-        <h1 class="display-5 fw-bold">Streetek 3D</h1>
+      <div class="px-4 py-5 my-5 text-center hero flex-grow-1">
+        <h1 class="display-5 fw-bold">Streetek</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
             Somos una empresa tecnológica comprometida con la sostenibilidad y la innovación urbana.
@@ -86,9 +86,10 @@
 
   </div>
 
+  <br><br><br><br><br><br><br><br><br><br>
 
   <!--footer-->
-<footer class="container">
+<footer class="container border-bottom">
   <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
     <p class="col-md-4 mb-0 text-body-secondary">
