--- a/Productos-euskera.html
+++ b/Productos-euskera.html
@@ -7,81 +7,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body class="productos">
-
+    <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="Streerek3d-euskera.html">Streetek 3D</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="Quienes-somos-euskera.html">Nor gara?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="Productos-euskera.html">Gure produktuak</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-                Hizkuntza
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Productos-ingles.html">Ingelesa</a></li>
-                <li><a class="dropdown-item" href="Productos.html">Gaztelania</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="Streerek3d-euskera.html">Streetek 3D</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Quienes-somos-euskera.html">Nor gara?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Productos-euskera.html">Gure produktuak</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Hizkuntza
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Productos-ingles.html">Ingelesa</a></li>
+              <li><a class="dropdown-item" href="Productos.html">Gaztelania</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!--Nav end-->
+    </div>
+  </nav>
+  <!--Nav fin-->
+  
+  <br><br><br><br><br><br><br><br>
 
     <!--Products-->
-    <div class="container text-center py-5">
+    <div class="container text-center flex-grow-1">
       <div class="row align-items-start">
 
         <div class="col">
           <h2>3D bankuak</h2>
-          <p>
-            Plastiko birziklatuekin egindako 3D inprimaketako hiri-bankua,
-            kaleetan, parkeetan, ikastetxeetako patioetan eta atseden-eremuetan erabiltzeko diseinatua.
-            Pertsonalizagarria, eguraldiaren aurkakoa eta mantentze-lan gutxikoa da,
-            ekonomia zirkularra sustatuz eta hiri-ongizatea hobetuz.
-          </p>
-          <img src="images/banco.png" class="imagen">
+          <p class="text-hidden texto">Plastiko birziklatuekin egindako 3D inprimaketako hiri-bankua, kaleetan, parkeetan, ikastetxeetako patioetan eta atseden-eremuetan erabiltzeko diseinatua. Pertsonalizagarria, eguraldiaren aurkakoa eta mantentze-lan gutxikoa da, ekonomia zirkularra sustatuz eta hiri-ongizatea hobetuz.</p>
+          <img src="images/banco.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>3D paperontzia</h2>
-          <p>
-            Material birziklatuekin egindako hiri-paperontzia,
-            betetze-maila neurtzeko ultrasoinu-sentsorea duen IoT gailu batekin integratua.
-            Hondakinen kudeaketa optimizatzen du, kostuak murriztuz eta
-            espazio publikoen garbitasuna eta jasangarritasuna hobetuz.
-          </p>
-          <img src="images/papelera.png" class="imagen">
+          <p class="text-hidden texto">Material birziklatuekin egindako hiri-paperontzia, betetze-maila neurtzeko ultrasoinu-sentsorea duen IoT gailu batekin integratua. Hondakinen kudeaketa optimizatzen du, kostuak murriztuz eta espazio publikoen garbitasuna eta jasangarritasuna hobetuz.</p>
+          <img src="images/papelera.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>Produktuen aurreikuspena VR bidez</h2>
-          <p>
-            Errealitate birtualeko zerbitzua, hiri-altzarien instalazioa benetako inguruneetan
-            aurrez ikusteko aukera ematen duena fabrikatu edo instalatu aurretik.
-            Udalentzat eta enpresentzat zuzenduta dago, erabakiak hobetuz,
-            akatsak murriztuz eta proiektu bakoitzaren emaitzak optimizatuz.
-          </p>
-          <img src="images/VR.png" class="imagen" width="800px">
+          <p class="text-hidden texto">Errealitate birtualeko zerbitzua, hiri-altzarien instalazioa benetako inguruneetan aurrez ikusteko aukera ematen duena fabrikatu edo instalatu aurretik. Udalentzat eta enpresentzat zuzenduta dago, erabakiak hobetuz, akatsak murriztuz eta proiektu bakoitzaren emaitzak optimizatuz.</p>
+          <img src="images/VR.png" class="imagen img-fluid img-product">
         </div>
 
       </div>
     </div>
-    <!--Products end-->
+    <!--column end-->
 
-    <!--Footer-->
-    <footer class="container">
+    <!--footer-->
+    <footer class="py-3 container">
       <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
         <p class="col-md-4 mb-0 text-body-secondary">
           © 2026 Streetek3D
@@ -89,7 +75,7 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
   </body>
 </html>
