--- a/Productos-ingles.html
+++ b/Productos-ingles.html
@@ -7,37 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles.css">
   </head>
-  <body class="productos">
+    <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="Streerek3d-ingles.html">Streetek 3D</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" class="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Quienes-somos-ingles.html">Who are we?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Productos-ingles.html">Our products</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Language
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Productos.html">Spanish</a></li>
-                <li><a class="dropdown-item" href="Productos-euskera.html">Basque</a></li>
-
-              </ul>
-            </li>
-          </ul>
-        </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="Streerek3d-ingles.html">Streetek 3D</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Quienes-somos-ingles.html">Who are we?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Productos-ingles.html">Our products</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Language
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Productos.html">Spanish</a></li>
+              <li><a class="dropdown-item" href="Productos-euskera.html">Basque</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!--Nav end-->
+    </div>
+  </nav>
+  <!--Nav fin-->
+  
+  <br><br><br><br><br><br><br><br>
 
     <!--column-->
     <div class="container text-center">
@@ -45,33 +46,20 @@
 
         <div class="col">
           <h2>3D Benches</h2>
-          <p class="text-hidden texto">
-            Urban bench manufactured using 3D printing with recycled plastics, designed for use in public spaces such as streets, parks,
-            school playgrounds, and rest areas. Its design is customizable, weather-resistant, and low maintenance, contributing to the
-            circular economy and improving urban well-being. It is available in individual or modular versions, allowing adaptation to
-            different environments and needs.
-          </p>
-          <img src="images/banco.png" class="imagen">
+          <p class="text-hidden texto">Urban bench manufactured using 3D printing with recycled plastics, designed for use in public spaces such as streets, parks, school playgrounds, and rest areas. Its design is customizable, weather-resistant, and low maintenance, contributing to the circular economy and improving urban well-being. It is available in individual or modular versions, allowing adaptation to different environments and needs.</p>
+          <img src="images/banco.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>3D Trash Bin</h2>
-          <p class="text-hidden texto">
-            Urban trash bin manufactured with recycled materials and integrated with an IoT device that includes an ultrasonic sensor to measure
-            fill levels. This system makes it possible to optimize waste management, reduce collection costs, and improve urban cleanliness through
-            remote monitoring of the bin’s status, enabling more efficient and sustainable management of public spaces.
-          </p>
-          <img src="images/papelera.png" class="imagen">
+          <p class="text-hidden texto">Urban trash bin manufactured with recycled materials and integrated with an IoT device that includes an ultrasonic sensor to measure fill levels. This system makes it possible to optimize waste management, reduce collection costs, and improve urban cleanliness through remote monitoring of the bin's status, enabling more efficient and sustainable management of public spaces.</p>
+          <img src="images/papelera.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>Product Preview in VR</h2>
-          <p class="text-hidden texto">
-            Virtual reality service applied to urban furniture, allowing the visualization and planning of product installation in real environments
-            before manufacturing or placement. It is aimed at municipalities and urban furniture companies and includes specific training for using
-            the tool, reducing errors, improving decision-making, and optimizing the final results of each project.
-          </p>
-          <img src="images/VR.png" width="800px" class="imagen">
+          <p class="text-hidden texto">Virtual reality service applied to urban furniture, allowing the visualization and planning of product installation in real environments before manufacturing or placement. It is aimed at municipalities and urban furniture companies and includes specific training for using the tool, reducing errors, improving decision-making, and optimizing the final results of each project.</p>
+          <img src="images/VR.png" class="imagen img-fluid img-product">
         </div>
 
       </div>
@@ -79,7 +67,7 @@
     <!--column end-->
 
     <!--footer-->
-    <footer class="container">
+    <footer class="py-3 container">
       <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
         <p class="col-md-4 mb-0 text-body-secondary">
@@ -102,7 +90,7 @@
 
       </div>
     </footer>
-    <!--footer end-->
+    <!--footer fin-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="script.js"></script>
