--- a/Nosotros/Quienes-somos-euskera.html
+++ b/Nosotros/Quienes-somos-euskera.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D | Nor gara</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
   <body>
 
     <!--Nav-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="Streerek3d-euskera.html">Streetek 3D</a>
+        <a class="navbar-brand" href="../streetek/Streerek3d-euskera.html">Streetek 3D</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
               <a class="nav-link active" href="Quienes-somos-euskera.html">Nor gara?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Productos-euskera.html">Gure produktuak</a>
+              <a class="nav-link" href="../Productos/Productos-euskera.html">Gure produktuak</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
@@ -52,7 +52,7 @@
 
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
+            <img src="../images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
             <div class="card-body">
               <h5 class="card-title mb-1">Alex Bernal</h5>
               <p class="text-muted small">Estrategia-aditua</p>
@@ -65,7 +65,7 @@
 
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
+            <img src="../images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
             <div class="card-body">
               <h5 class="card-title mb-1">Giorgio Gissi</h5>
               <p class="text-muted small">3D diseinua</p>
@@ -78,7 +78,7 @@
 
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
+            <img src="../images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
             <div class="card-body">
               <h5 class="card-title mb-1">Izan Garcia</h5>
               <p class="text-muted small">Diseinu sortzailea</p>
@@ -91,7 +91,7 @@
 
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
+            <img src="../images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
             <div class="card-body">
               <h5 class="card-title mb-1">Ioritz Adrian</h5>
               <p class="text-muted small">VR aditua</p>
@@ -115,6 +115,10 @@
 
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
         </ul>
       </div>
     </footer>
