--- a/Nosotros/Quienes-somos-ingles.html
+++ b/Nosotros/Quienes-somos-ingles.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
   <body>
     <!--Nav-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="Streerek3d-ingles.html">Streetek 3D</a>
+        <a class="navbar-brand" href="../streetek/Streerek3d-ingles.html">Streetek 3D</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,15 +21,15 @@
               <a class="nav-link active" aria-current="page" href="Quienes-somos-ingles.html">Who are we?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Productos-ingles.html">Our products</a>
+              <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Language
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Quienes-somos.html">Spanish</a></li>
-                <li><a class="dropdown-item" href="Quienes-somos-euskera.html">Basque</a></li>
+                <li><a class="dropdown-item" href="Quienes-somos.html">Español</a></li>
+                <li><a class="dropdown-item" href="Quienes-somos-euskera.html">Euskera</a></li>
 
               </ul>
             </li>
@@ -53,7 +53,7 @@
         <!-- Alex Bernal -->
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
+            <img src="../images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
             <div class="card-body">
               <h5 class="card-title mb-1">Alex Bernal</h5>
               <p class="text-muted small">Strategic expert</p>
@@ -67,7 +67,7 @@
         <!-- Giorgio Gissi -->
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
+            <img src="../images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
             <div class="card-body">
               <h5 class="card-title mb-1">Giorgio Gissi</h5>
               <p class="text-muted small">3D Design</p>
@@ -81,7 +81,7 @@
         <!-- Izan Garcia -->
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
+            <img src="../images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
             <div class="card-body">
               <h5 class="card-title mb-1">Izan Garcia</h5>
               <p class="text-muted small">Design creator</p>
@@ -96,7 +96,7 @@
         <!-- Ioritz Adrian -->
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card h-100 text-center">
-            <img src="images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
+            <img src="../images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
             <div class="card-body">
               <h5 class="card-title mb-1">Ioritz Adrian</h5>
               <p class="text-muted small">VR Expert</p>
@@ -126,10 +126,10 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/Instagram_icon.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/X_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/discord-round-color-icon.webp" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
 
