--- a/Productos/Productos-euskera.html
+++ b/Productos/Productos-euskera.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D | Gure produktuak</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
     <body>
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Streerek3d-euskera.html">Streetek 3D</a>
+      <a class="navbar-brand" href="../streetek/Streerek3d-euskera.html">Streetek 3D</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Quienes-somos-euskera.html">Nor gara?</a>
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-euskera.html">Nor gara?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Productos-euskera.html">Gure produktuak</a>
@@ -47,19 +47,19 @@
         <div class="col">
           <h2>3D bankuak</h2>
           <p class="text-hidden texto">Plastiko birziklatuekin egindako 3D inprimaketako hiri-bankua, kaleetan, parkeetan, ikastetxeetako patioetan eta atseden-eremuetan erabiltzeko diseinatua. Pertsonalizagarria, eguraldiaren aurkakoa eta mantentze-lan gutxikoa da, ekonomia zirkularra sustatuz eta hiri-ongizatea hobetuz.</p>
-          <img src="images/banco.png" class="imagen img-fluid img-product">
+          <img src="../images/banco.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>3D paperontzia</h2>
           <p class="text-hidden texto">Material birziklatuekin egindako hiri-paperontzia, betetze-maila neurtzeko ultrasoinu-sentsorea duen IoT gailu batekin integratua. Hondakinen kudeaketa optimizatzen du, kostuak murriztuz eta espazio publikoen garbitasuna eta jasangarritasuna hobetuz.</p>
-          <img src="images/papelera.png" class="imagen img-fluid img-product">
+          <img src="../images/papelera.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>Produktuen aurreikuspena VR bidez</h2>
           <p class="text-hidden texto">Errealitate birtualeko zerbitzua, hiri-altzarien instalazioa benetako inguruneetan aurrez ikusteko aukera ematen duena fabrikatu edo instalatu aurretik. Udalentzat eta enpresentzat zuzenduta dago, erabakiak hobetuz, akatsak murriztuz eta proiektu bakoitzaren emaitzak optimizatuz.</p>
-          <img src="images/VR.png" class="imagen img-fluid img-product">
+          <img src="../images/VR.png" class="imagen img-fluid img-product">
         </div>
 
       </div>
@@ -72,6 +72,12 @@
         <p class="col-md-4 mb-0 text-body-secondary">
           © 2026 Streetek3D
         </p>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
+        </ul>
       </div>
     </footer>
 
