--- a/Productos/Productos-ingles.html
+++ b/Productos/Productos-ingles.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
     <body>
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Streerek3d-ingles.html">Streetek 3D</a>
+      <a class="navbar-brand" href="../streetek/Streerek3d-ingles.html">Streetek 3D</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Quienes-somos-ingles.html">Who are we?</a>
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-ingles.html">Who are we?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Productos-ingles.html">Our products</a>
@@ -28,8 +28,8 @@
               Language
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Productos.html">Spanish</a></li>
-              <li><a class="dropdown-item" href="Productos-euskera.html">Basque</a></li>
+              <li><a class="dropdown-item" href="Productos.html">Español</a></li>
+              <li><a class="dropdown-item" href="Productos-euskera.html">Euskera</a></li>
             </ul>
           </li>
         </ul>
@@ -47,19 +47,19 @@
         <div class="col">
           <h2>3D Benches</h2>
           <p class="text-hidden texto">Urban bench manufactured using 3D printing with recycled plastics, designed for use in public spaces such as streets, parks, school playgrounds, and rest areas. Its design is customizable, weather-resistant, and low maintenance, contributing to the circular economy and improving urban well-being. It is available in individual or modular versions, allowing adaptation to different environments and needs.</p>
-          <img src="images/banco.png" class="imagen img-fluid img-product">
+          <img src="../images/banco.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>3D Trash Bin</h2>
           <p class="text-hidden texto">Urban trash bin manufactured with recycled materials and integrated with an IoT device that includes an ultrasonic sensor to measure fill levels. This system makes it possible to optimize waste management, reduce collection costs, and improve urban cleanliness through remote monitoring of the bin's status, enabling more efficient and sustainable management of public spaces.</p>
-          <img src="images/papelera.png" class="imagen img-fluid img-product">
+          <img src="../images/papelera.png" class="imagen img-fluid img-product">
         </div>
 
         <div class="col">
           <h2>Product Preview in VR</h2>
           <p class="text-hidden texto">Virtual reality service applied to urban furniture, allowing the visualization and planning of product installation in real environments before manufacturing or placement. It is aimed at municipalities and urban furniture companies and includes specific training for using the tool, reducing errors, improving decision-making, and optimizing the final results of each project.</p>
-          <img src="images/VR.png" class="imagen img-fluid img-product">
+          <img src="../images/VR.png" class="imagen img-fluid img-product">
         </div>
 
       </div>
@@ -81,10 +81,10 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/Instagram_icon.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/X_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/discord-round-color-icon.webp" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
 
