--- a/Productos/Productos.html
+++ b/Productos/Productos.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
     <body>
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="streetek3d.html">Streetek 3D</a>
+      <a class="navbar-brand" href="../streetek/streetek3d.html">Streetek 3D</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Quienes-somos.html">¿Quienes somos?</a>
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Productos.html">Nuestros productos</a>
@@ -49,21 +49,21 @@
         patios escolares y zonas de descanso.Su diseño es personalizable, resistente a la intemperie y de bajo mantenimiento, contribuyendo a la 
         economía circular y a la mejora del bienestar urbano. Está disponible en versión individual o modular, permitiendo adaptarse a diferentes 
         entornos y necesidades.</p>
-        <img src="images/banco.png" class="imagen img-fluid img-product">
+        <img src="../images/banco.png" class="imagen img-fluid img-product">
     </div>
     <div class="col-12 col-md-4 producto-col">
       <h2>Papelera 3D</h2>
       <p class="text-hidden texto">Papelera urbana fabricada con materiales reciclados e integrada con un dispositivo IoT que incorpora un sensor de ultrasonidos para medir 
         el nivel de llenado. Este sistema permite optimizar la gestión de residuos, reducir costes de recogida y mejorar la limpieza urbana mediante 
         el control remoto del estado de la papelera, facilitando una gestión más eficiente y sostenible de los espacios públicos.</p>
-        <img src="images/papelera.png" class="imagen img-fluid img-product">
+        <img src="../images/papelera.png" class="imagen img-fluid img-product">
     </div>
     <div class="col-12 col-md-4 producto-col">
       <h2>Previsualizacion de producto en VR</h2>
       <p class="text-hidden texto">Servicio de realidad virtual aplicada al mobiliario urbano, que permite visualizar y planificar la instalación de productos en entornos reales antes de 
         su fabricación o colocación. Está dirigido a ayuntamientos y empresas de mobiliario, e incluye formación específica para el uso de la herramienta, 
         reduciendo errores, mejorando la toma de decisiones y optimizando los resultados finales de cada proyecto.</p>
-        <img src="images/VR.png" class="imagen img-fluid img-product">
+        <img src="../images/VR.png" class="imagen img-fluid img-product">
     </div>
   </div>
 </div>
@@ -83,10 +83,10 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/Instagram_icon.png" width="30px"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/X_icon.svg.png" width="30px"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/discord-round-color-icon.webp" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
 
