--- a/streetek/Streerek3d-euskera.html
+++ b/streetek/Streerek3d-euskera.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
   <body>
 
@@ -19,10 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="Quienes-somos-euskera.html">Nor gara?</a>
+              <a class="nav-link active" href="../Nosotros/Quienes-somos-euskera.html">Nor gara?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Productos-euskera.html">Gure produktuak</a>
+              <a class="nav-link" href="../Productos/Productos-euskera.html">Gure produktuak</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Contactos/Contacto-euskera.html">Gure kontaktua</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Tiendas/TiendaOnline-Euskera.html">Gure produktuak</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
@@ -54,7 +60,7 @@
         non hiri-altzariak ez diren inposatutako elementuak, baizik eta ingurunean eta erabiltzaileengan integratutakoak.
         Teknologia, diseinua eta jasangarritasuna uztartzen ditugu, material birziklatuak eta fabrikazio arduratsua erabiliz.
       </p>
-      <a href="Quienes-somos-euskera.html" class="btn btn-primary btn-lg">Gehiago irakurri</a>
+      <a href="../Nosotros/Quienes-somos-euskera.html" class="btn btn-primary btn-lg">Gehiago irakurri</a>
     </div>
 
     <br>
@@ -67,7 +73,7 @@
         Bankuak eta paperontziak eskaintzen ditugu, espazio bakoitzera egokituta.
         Gainera, errealitate birtualean eta areagotuan produktuak aurrez ikusteko aukera eskaintzen dugu.
       </p>
-      <a href="Productos-euskera.html" class="btn btn-primary btn-lg">Gehiago irakurri</a>
+      <a href="../Productos/Productos-euskera.html" class="btn btn-primary btn-lg">Gehiago irakurri</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
