--- a/streetek/Streerek3d-ingles.html
+++ b/streetek/Streerek3d-ingles.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek 3D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
   <body>
     <!--Nav-->
@@ -18,17 +18,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Quienes-somos-ingles.html">Who are we?</a>
+              <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-ingles.html">Who are we?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Productos.html">Our products</a>
+              <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Contactos/Contacto-ingles.html">Our contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Tiendas/TiendaOnline-ingles.html">Our shop</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Language
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="streetek3d.html">Spanish</a></li>
+                <li><a class="dropdown-item" href="../streetek/streetek3d.html">Spanish</a></li>
                 <li><a class="dropdown-item" href="Streerek3d-euskera.html">Basque</a></li>
 
               </ul>
@@ -59,7 +65,7 @@
       </p>
       <br>
 
-      <a href="Quienes-somos-ingles.html">
+      <a href="../Nosotros/Quienes-somos-ingles.html">
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Read more</button>
       </a>
     </div>
@@ -75,7 +81,7 @@
       </p>
       <br>
 
-      <a href="Productos-ingles.html">
+      <a href="../Productos/Productos-ingles.html">
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Read more</button>
       </a>
     </div>
@@ -95,10 +101,10 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/Instagram_icon.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/X_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/discord-round-color-icon.webp" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
 
