--- a/streetek/streetek3d.html
+++ b/streetek/streetek3d.html
@@ -5,23 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Streetek</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../Styles.css">
   </head>
   <body>
     <!--Nav-->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="images/streetek.svg" width="165px"></a>
+      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Quienes-somos.html">¿Quienes somos?</a>
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Productos.html">Nuestros productos</a>
+            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -66,7 +72,7 @@
     </p>
 
 
-    <a href="Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">leer más</button></a>
+    <a href="../Nosotros/Quienes-somos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">leer más</button></a>
 
     
   </div>
@@ -82,7 +88,7 @@
     </p>
 
 
-    <a href="Productos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Leer más</button></a>
+    <a href="../Productos/Productos.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Leer más</button></a>
 
   </div>
 
@@ -103,10 +109,10 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/Instagram_icon.png" width="30px"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/X_icon.svg.png" width="30px"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="images/discord-round-color-icon.webp" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
 
