--- a/Nosotros/Quienes-somos-euskera.html
+++ b/Nosotros/Quienes-somos-euskera.html
@@ -24,6 +24,12 @@
             <li class="nav-item">
               <a class="nav-link" href="../Productos/Productos-euskera.html">Gure produktuak</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Contactos/Contacto-euskera.html">Gure kontaktua</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Tiendas/TiendaOnline-Euskera.html">Gure produktuak</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
                 Hizkuntza
