--- a/Nosotros/Quienes-somos-ingles.html
+++ b/Nosotros/Quienes-somos-ingles.html
@@ -23,6 +23,12 @@
             <li class="nav-item">
               <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Contactos/Contacto-ingles.html">Our contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Tiendas/TiendaOnline-ingles.html">Our shop</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Language
