--- a/Nosotros/Quienes-somos.html
+++ b/Nosotros/Quienes-somos.html
@@ -23,6 +23,12 @@
           <li class="nav-item">
             <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               idioma
