--- a/Productos/Productos-euskera.html
+++ b/Productos/Productos-euskera.html
@@ -23,6 +23,12 @@
           <li class="nav-item">
             <a class="nav-link" href="Productos-euskera.html">Gure produktuak</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Contactos/Contacto-euskera.html">Gure kontaktua</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Tiendas/TiendaOnline-Euskera.html">Gure produktuak</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Hizkuntza
