--- a/streetek/streetek3d.html
+++ b/streetek/streetek3d.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="../Styles.css">
   </head>
   <body>
+
     <!--Nav-->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
