--- a/Tiendas/IiendaOnline.html
+++ b/Tiendas/IiendaOnline.html
@@ -4,18 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+
+
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
-    <nav>
-        <ul>
-            <li class="nav-item">
-                <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
-            </li>
+    <!--Nav-->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              idioma
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
+              <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
+            </ul>
+          </li>
         </ul>
-    </nav>
+      </div>
+    </div>
+  </nav>
+  <!--Nav fin-->
+
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+  </div>
+</div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+  </div>
+</div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+  </div>
+</div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
