--- a/streetek/Streerek3d-euskera.html
+++ b/streetek/Streerek3d-euskera.html
@@ -9,41 +9,41 @@
   </head>
   <body>
 
-    <!--Nav-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="Streerek3d-euskera.html">Streetek 3D</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+            width="165px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="../Nosotros/Quienes-somos-euskera.html">Nor gara?</a>
+              <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Productos/Productos-euskera.html">Gure produktuak</a>
+              <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Contactos/Contacto-euskera.html">Gure kontaktua</a>
+              <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Tiendas/TiendaOnline-Euskera.html">Gure produktuak</a>
+              <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-                Hizkuntza
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Idioma
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingelesa</a></li>
-                <li><a class="dropdown-item" href="streetek3d.html">Gaztelania</a></li>
+                <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
+                <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
               </ul>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <!--Nav fin-->
 
     <div class="px-4 py-5 my-5 text-center hero">
       <h1 class="display-5 fw-bold">Streetek 3D</h1>
