--- a/Productos/Productos-ingles.html
+++ b/Productos/Productos-ingles.html
@@ -8,41 +8,41 @@
     <link rel="stylesheet" href="../Styles.css">
   </head>
     <body>
-    <!--Nav-->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../streetek/Streerek3d-ingles.html">Streetek 3D</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-ingles.html">Who are we?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Productos-ingles.html">Our products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto-ingles.html">Our contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Tiendas/TiendaOnline-ingles.html">Our shop</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Language
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Productos.html">Español</a></li>
-              <li><a class="dropdown-item" href="Productos-euskera.html">Euskera</a></li>
-            </ul>
-          </li>
-        </ul>
+    <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+            width="165px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Idioma
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
+                <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!--Nav fin-->
+    </nav>
   
   <br><br><br><br><br><br><br><br>
 
