--- a/streetek/streetek3d.html
+++ b/streetek/streetek3d.html
@@ -12,7 +12,6 @@
 
 <body>
 
-  <!--Nav-->
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
@@ -30,14 +29,14 @@
             <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+            <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
+            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              idioma
+              Idioma
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
@@ -48,7 +47,6 @@
       </div>
     </div>
   </nav>
-  <!--Nav fin-->
 
 
 
