--- a/Productos/Productos.html
+++ b/Productos/Productos.html
@@ -10,7 +10,7 @@
     <body>
     <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+        <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
             width="165px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,8 +27,6 @@
             <li class="nav-item">
               <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -73,6 +71,8 @@
     </div>
   </div>
 </div>
+
+<div class="text-center"><a href="/Tiendas/IiendaOnline.html"><button  class="btn btn-primary btnBuy">COMPRAR</button></a></div>
 <!--column fin-->
 <!--footer-->
 <footer class="py-3 container">
