--- a/streetek/Streerek3d.html
+++ b/streetek/Streerek3d.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Streetek 3D</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles.css">
 </head>
@@ -27,8 +27,8 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Welcome to Streetek 3D</h1>
-        <p>Innovative 3D printing solutions for sustainable urban furniture and smart city development.</p>
+        <h1>Bienvenido a Streetek 3D</h1>
+        <p>Contenido de la tienda aquí.</p>
     </div>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
