--- a/streetek/streetek3d.html
+++ b/streetek/streetek3d.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+      <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
           width="165px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,8 +31,6 @@
           <li class="nav-item">
             <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
