--- a/Contactos/Contacto-euskera.html
+++ b/Contactos/Contacto-euskera.html
@@ -7,33 +7,34 @@
     <link rel="stylesheet" href="../Styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../streetek/Streerek3d-euskera.html">Streetek 3D</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="../streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-euskera.html">Nor gara?</a>
+                        <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">Nor gara?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Productos/Productos-euskera.html">Gure produktuak</a>
+                        <a class="nav-link" href="../Productos/Productos.html">Gure produktuak</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Contactos/Contacto-euskera.html">Gure kontaktua</a>
+                        <a class="nav-link" href="../Contactos/Contacto.html">Gure kontaktua</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Tiendas/TiendaOnline-Euskera.html">Gure produktuak</a>
+                        <a class="nav-link" href="../Tiendas/IiendaOnline.html">Gure tienda</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Hizkuntza
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Contacto.html">Gaztelania</a></li>
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="Contacto-ingles.html">Ingelesa</a></li>
+                            <li><a class="dropdown-item" href="Contacto-euskera.html">Euskera</a></li>
                         </ul>
                     </li>
                 </ul>
