--- a/Contactos/Contacto-ingles.html
+++ b/Contactos/Contacto-ingles.html
@@ -7,45 +7,41 @@
     <link rel="stylesheet" href="../Styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../streetek/Streerek3d-ingles.html">Streetek 3D</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-ingles.html">Who are we?</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Contactos/Contacto-ingles.html">Our contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Tiendas/TiendaOnline-ingles.html">Our shop</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Language
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Contacto.html">Español</a></li>
-                            <li><a class="dropdown-item" href="Contacto-euskera.html">Euskera</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../streetek/streetek3d.html">Streetek 3D</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">Who are we?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Productos/Productos.html">Our products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Contactos/Contacto.html">Our contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Our shop</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Language
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="Contacto-ingles.html">English</a></li>
+                                <li><a class="dropdown-item" href="Contacto-euskera.html">Basque</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <div class="container">
         <h1>Contact Us</h1>
         <form>
