--- a/Nosotros/Quienes-somos-ingles.html
+++ b/Nosotros/Quienes-somos-ingles.html
@@ -9,140 +9,140 @@
   </head>
   <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../streetek/Streerek3d-ingles.html">Streetek 3D</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Quienes-somos-ingles.html">Who are we?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../Contactos/Contacto-ingles.html">Our contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../Tiendas/TiendaOnline-ingles.html">Our shop</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Language
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Quienes-somos.html">Español</a></li>
-                <li><a class="dropdown-item" href="Quienes-somos-euskera.html">Euskera</a></li>
-
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!--Nav end-->
-
-    <!--start-->
-    <section class="container py-5" id="quienes-somos">
-      <div class="text-center mb-5">
-        <h2 class="fw-bold">Who we are</h2>
-        <p class="text-muted">
-          A team committed to innovation, sustainability, and urban design.
-        </p>
-      </div>
-
-      <div class="row g-4">
-
-        <!-- Alex Bernal -->
-        <div class="col-12 col-md-6 col-lg-3">
-          <div class="card h-100 text-center">
-            <img src="../images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
-            <div class="card-body">
-              <h5 class="card-title mb-1">Alex Bernal</h5>
-              <p class="text-muted small">Strategic expert</p>
-              <p class="card-text">
-                Responsible for strategy, sustainability, and coordination with public and private entities.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Giorgio Gissi -->
-        <div class="col-12 col-md-6 col-lg-3">
-          <div class="card h-100 text-center">
-            <img src="../images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
-            <div class="card-body">
-              <h5 class="card-title mb-1">Giorgio Gissi</h5>
-              <p class="text-muted small">3D Design</p>
-              <p class="card-text">
-                Expert in manufacturing, sustainable materials, and 3D printing applied to urban furniture.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Izan Garcia -->
-        <div class="col-12 col-md-6 col-lg-3">
-          <div class="card h-100 text-center">
-            <img src="../images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
-            <div class="card-body">
-              <h5 class="card-title mb-1">Izan Garcia</h5>
-              <p class="text-muted small">Design creator</p>
-              <p class="card-text">
-                Responsible for technological development, IoT, design, and project management
-                related to urban innovation.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Ioritz Adrian -->
-        <div class="col-12 col-md-6 col-lg-3">
-          <div class="card h-100 text-center">
-            <img src="../images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
-            <div class="card-body">
-              <h5 class="card-title mb-1">Ioritz Adrian</h5>
-              <p class="text-muted small">VR Expert</p>
-              <p class="card-text">
-                Specialist in project visualization using virtual reality.
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <!--end-->
-    <!--footer-->
-    <footer class="container">
-      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-
-        <p class="col-md-4 mb-0 text-body-secondary">
-          © 2026 Streetek3D
-        </p>
-
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" aria-hidden="true">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
-
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../streetek/streetek3d.html">Streetek 3D</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Quienes-somos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              idioma
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Quienes-somos-ingles.html">Ingles</a></li>
+              <li><a class="dropdown-item" href="Quienes-somos-euskera.html">Euskera</a></li>
+            </ul>
+          </li>
         </ul>
-
       </div>
-    </footer>
-    <!--footer end-->
+    </div>
+  </nav>
+  <!--Nav fin-->
+<!--inicio-->
+<section class="container py-5 flex-grow-1" id="quienes-somos">
+  <div class="text-center mb-5">
+    <h2 class="fw-bold">Who We Are</h2>
+    <p class="text-muted">
+      A team committed to innovation, sustainability, and urban design.
+    </p>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+  <div class="row g-4">
+
+    <!-- Alex ANAL -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="../images/Alex.jpg" class="card-img-top" alt="Alex Bernal">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Alex Bernal</h5>
+          <p class="text-muted small">Strategic Expert</p>
+          <p class="card-text">
+            Responsible for strategy, sustainability, and coordination with public and private entities.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Giorgio Gissi -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="../images/Gio.jpg" class="card-img-top" alt="Giorgio Gissi">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Giorgio Gissi</h5>
+          <p class="text-muted small">3D Design</p>
+          <p class="card-text">
+            Expert in manufacturing, sustainable materials, and 3D printing applied to urban furniture.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Izan Garcia -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="../images/Izan.jpg" class="card-img-top" alt="Izan Garcia">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Izan Garcia</h5>
+          <p class="text-muted small">Design Creator</p>
+          <p class="card-text">
+            Responsible for technological development, IoT and design, technology or project management
+            related to urban innovation.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Ioritz Adrian -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 text-center">
+        <img src="../images/Ioritz.jpg" class="card-img-top" alt="Ioritz Adrian">
+        <div class="card-body">
+          <h5 class="card-title mb-1">Ioritz Adrian</h5>
+          <p class="text-muted small">VR Expert</p>
+          <p class="card-text">
+            Specialist in project visualization using virtual reality.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!--final-->
+<!--footer-->
+<footer class="py-3 container">
+  <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+
+    <p class="col-md-4 mb-0 text-body-secondary">
+      © 2026 Streetek3D
+    </p>
+
+    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
+      <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
+    </a>
+
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
+    </ul>
+
+  </div>
+</footer>
+<!--footer fin-->
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="script.js"></script>  
+</body>
 </html>
