--- a/Productos/Productos-euskera.html
+++ b/Productos/Productos-euskera.html
@@ -3,40 +3,38 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Streetek 3D | Gure produktuak</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Streetek 3D</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles.css">
   </head>
     <body>
     <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
-            width="165px"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
+              <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">Nor gara?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+              <a class="nav-link" href="../Productos/Productos.html">Gure produktuak</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
+              <a class="nav-link" href="../Contactos/Contacto.html">Kontaktua</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
+              <a class="nav-link" href="../Tiendas/IiendaOnline.html">Gure tienda</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Idioma
+                Hizkuntza
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
-                <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
+                <li><a class="dropdown-item" href="Productos-ingles.html">Ingelesa</a></li>
+                <li><a class="dropdown-item" href="Productos-euskera.html">Euskera</a></li>
               </ul>
             </li>
           </ul>
@@ -46,46 +44,54 @@
   
   <br><br><br><br><br><br><br><br>
 
-    <!--Products-->
-    <div class="container text-center flex-grow-1">
-      <div class="row align-items-start">
-
-        <div class="col">
-          <h2>3D bankuak</h2>
-          <p class="text-hidden texto">Plastiko birziklatuekin egindako 3D inprimaketako hiri-bankua, kaleetan, parkeetan, ikastetxeetako patioetan eta atseden-eremuetan erabiltzeko diseinatua. Pertsonalizagarria, eguraldiaren aurkakoa eta mantentze-lan gutxikoa da, ekonomia zirkularra sustatuz eta hiri-ongizatea hobetuz.</p>
-          <img src="../images/banco.png" class="imagen img-fluid img-product">
-        </div>
-
-        <div class="col">
-          <h2>3D paperontzia</h2>
-          <p class="text-hidden texto">Material birziklatuekin egindako hiri-paperontzia, betetze-maila neurtzeko ultrasoinu-sentsorea duen IoT gailu batekin integratua. Hondakinen kudeaketa optimizatzen du, kostuak murriztuz eta espazio publikoen garbitasuna eta jasangarritasuna hobetuz.</p>
-          <img src="../images/papelera.png" class="imagen img-fluid img-product">
-        </div>
-
-        <div class="col">
-          <h2>Produktuen aurreikuspena VR bidez</h2>
-          <p class="text-hidden texto">Errealitate birtualeko zerbitzua, hiri-altzarien instalazioa benetako inguruneetan aurrez ikusteko aukera ematen duena fabrikatu edo instalatu aurretik. Udalentzat eta enpresentzat zuzenduta dago, erabakiak hobetuz, akatsak murriztuz eta proiektu bakoitzaren emaitzak optimizatuz.</p>
-          <img src="../images/VR.png" class="imagen img-fluid img-product">
-        </div>
-
-      </div>
+  <!--column-->
+  <div class="container text-center flex-grow-1">
+  <div class="row align-items-start">
+    <div class="col-12 col-md-4 producto-col">
+      <h2>3D Bankuak</h2>
+      <p class="text-hidden texto">Hiri-bankuak 3D inprimaketaren bidez egindak, material birziklatuarekin, espazio publikoetan erabiltzeko diseinatuta dituzte. Kaleak, parkea, eskola-patioiak eta esku-gune batzuetan erabiltzeko. Diseinua pertsonalizagarria da, intemperie-ekarria eta baxuko mantentzea, zirkulareko ekonomiara eta hiri-ongizatera laguntzen dute. Bertsio indibiduala edo modularra, ingurune eta behar desberdintara moldatu ahal dituzte.</p>
+        <img src="../images/banco.png" class="imagen img-fluid img-product">
     </div>
-    <!--column end-->
+    <div class="col-12 col-md-4 producto-col">
+      <h2>3D Paperondoak adituak</h2>
+      <p class="text-hidden texto">Hiri-paperondoak material birziklatuarekin egindak eta IoT dispositibua integratuta, ultrasoinu sentsore bat betetze maila neurtzeko. Sistema honek hondakinen kudeaketa optimizatzen du, biltegi-kostuak murrizten ditu eta hiri-garbitasuna hobearen dute, paperondoen egoeraren ferneko zaintza bidez, espazio publikoen kudeaketa eraginkorragoa eta jasangarriagoa egiten dute.</p>
+        <img src="../images/papelera.png" class="imagen img-fluid img-product">
+    </div>
+    <div class="col-12 col-md-4 producto-col">
+      <h2>VR Produktuaren aurreikuspena</h2>
+      <p class="text-hidden texto">Errealitate birtualaren zerbitzua hiri-altzariari aplikatuta, produktuen instalazioaren bistaratzea eta planifikazioa egiten du ingurune erreal batean, haien fabrikazioa edo kokalekua baino lehen. Udalak eta altzari enpresen helburua du, eta tresnaari erabileraren prestaketa zehatza biltzen du, akatsak murrizten, erabakiak hobea bihurtzen eta proiektu bakoitzaren emaitzak optimizatzen dute.</p>
+        <img src="../images/VR.png" class="imagen img-fluid img-product">
+    </div>
+  </div>
+</div>
 
-    <!--footer-->
-    <footer class="py-3 container">
-      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">
-          © 2026 Streetek3D
-        </p>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
-        </ul>
-      </div>
-    </footer>
+<div class="text-center"><a href="/Tiendas/IiendaOnline.html"><button  class="btn btn-primary btnBuy">EROSI</button></a></div>
+<!--column fin-->
+<!--footer-->
+<footer class="py-3 container">
+  <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+
+    <p class="col-md-4 mb-0 text-body-secondary">
+      © 2026 Streetek3D
+    </p>
+
+    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
+      <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
+    </a>
+
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
+    </ul>
+
+  </div>
+</footer>
+
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <script src="script.js"></script>
