--- a/Tiendas/IiendaOnline.html
+++ b/Tiendas/IiendaOnline.html
@@ -65,14 +65,14 @@
         <div class="row">
             <div class="col">
                 <img class="img-fluid" src="../images/banco.png" width="450px">
-                <h3>Producto 1</h3>
-                <p>TextoTextoTextoTexto</p>
+                <h3>Banco Uniplaza</h3>
+                <p>Un banco con estilo moderno y sencillo</p>
                 <button class="btn btn-primary" >COMPRAR</button>
             </div>
             <div class="col">
                 <img class="img-fluid" src="../images/papelera.png" width="450px">
-                <h3>Producto 1</h3>
-                <p>TextoTextoTextoTexto</p>
+                <h3>Papelera</h3>
+                <p>Esta papelera cuando esta llena se iluminara</p>
                 <button class="btn btn-primary">COMPRAR</button>
             </div>
             
@@ -86,8 +86,8 @@
                 <div class="row">
             <div class="col">
                 <img class="img-fluid" src="../images/VR.png" width="450px">
-                <h3>Producto 1</h3>
-                <p>TextoTextoTextoTexto</p>
+                <h3>Servicio VR</h3>
+                <p>Visualice los objetos en su entorno antes de construir</p>
                 <button class="btn btn-primary">COMPRAR</button>
                 
             </div>
