--- a/Tiendas/TiendaOnline-Euskera.html
+++ b/Tiendas/TiendaOnline-Euskera.html
@@ -15,31 +15,31 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Idioma
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
-                                <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-euskera.html">Nor gara?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../Productos/Productos-euskera.html">Gure produktuak</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../Contactos/Contacto-euskera.html">Gure kontaktua</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../Tiendas/TiendaOnline-Euskera.html">Gure tienda</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Hizkuntza
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="TiendaOnline-ingles.html">Ingelesa</a></li>
+                                        <li><a class="dropdown-item" href="TiendaOnline-Euskera.html">Euskera</a></li>
+                                    </ul>
+                                </li>
                             </ul>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
             </div>
         </nav>
 </body>
