--- a/Tiendas/TiendaOnline-ingles.html
+++ b/Tiendas/TiendaOnline-ingles.html
@@ -11,17 +11,14 @@
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+            <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="../Nosotros/Quienes-somos-ingles.html">Who are we?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../Contactos/Contacto-ingles.html">Our contact</a>
@@ -33,7 +30,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Hello, world!</h1>
+        <h1>Welcome to our online shop</h1>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
