--- a/Contacto.html
+++ b/Contacto.html
@@ -41,7 +41,7 @@
             <h2>Contacto</h2>
             <p>Para más información, por favor contáctenos a través de nuestras redes sociales.</p>
         <div class="d-flex justify-content-center">
-            <img class="map" src="../images/image.png" alt="LinkedIn_icon.svg.png" width="500px">
+            <a href="https://www.google.com/maps/@43.2755378,-2.9676503,3a,75y,46.31h,111.29t/data=!3m7!1e1!3m5!1sdUoHK5jDosMOirKddUKAoQ!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D-21.290762287551743%26panoid%3DdUoHK5jDosMOirKddUKAoQ%26yaw%3D46.30703818340924!7i13312!8i6656?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D"><img class="map" src="../images/image.png" alt="LinkedIn_icon.svg.png" width="500px"></a>
         </div>
             
         </div>
