--- a/Productos.html
+++ b/Productos.html
@@ -64,7 +64,7 @@
   </div>
 </div>
 
-<div class="text-center"><a href="/Tiendas/IiendaOnline.html"><button  class="btn btn-primary btnBuy">COMPRAR</button></a></div>
+<div class="text-center"><a href="IiendaOnline.html"><button  class="btn btn-primary btnBuy">COMPRAR</button></a></div>
 <!--column fin-->
 <!--footer-->
 <footer class="py-3 container">
